# beprepared

./: .gitignore  3RD_PARTY_LICENSES  404.html  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  LICENSE  README.md  buildcommitweb.bash  examples.txt  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
beprepared/: __init__.py  cli.py  dataset.py  image.py  llm.py  logging.py  node.py  properties.py  utils.py  web.py  workspace.py
beprepared/nodes/: __init__.py  aesthetics.py  anonymize.py  clip.py  convert_format.py  crop.py  dedupe.py  downscale.py  filters.py  florence2caption.py  geminicaption.py  gemma3caption.py  gpt4ocaption.py  humancaption.py  humanfilter.py  humantag.py  joycaption.py  joycaptionalpha1.py  joycaptionalpha2.py  llamacaption.py  llmtransform.py  load.py  molmocaption.py  nudenet.py  parallelworker.py  qwenvlcaption.py  save.py  tags.py  upscale.py  utils.py  watermarkremoval.py  xgenmmcaption.py
beprepared/web/: App.vue  Generic.vue  HumanCaption.vue  HumanFilter.vue  HumanTag.vue  index.html  package-lock.json  package.json  vite.config.js
docs/: another.md  conf.py  examples.md  hacking.md  index.md  index.rst
docs/nodes/: aesthetics.md  anonymize.md  captioning.md  clip.md  convertformat.md  crop.md  dedupe.md  filtering.md  load.md  nsfw.md  save.md  scaling.md  tags.md  utils.md  watermarkremoval.md
examples/: index.html
hacking/: index.html
nodes/aesthetics/: index.html
nodes/anonymize/: index.html
nodes/captioning/: index.html
nodes/clip/: index.html
nodes/convertformat/: index.html
nodes/crop/: index.html
nodes/dedupe/: index.html
search/: search_index.json
(+68 files in other folders)
