[tool.poetry]
name = "beprepared"
version = "0.1.1"
description = ""
authors = ["Brian Luczkiewicz <brian@blucz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
torchvision = "^0.19.1"
torch = "^2.4.1"
tqdm = "^4.66.5"
peft = "^0.12.0"
nudenet = ">=3.4.2"
openai = "^1.48.0"
pydantic = "^2.9.2"
open-clip-torch = "^2.26.1"
einops = "^0.8.0"
einops-exts = "^0.0.4"
qwen-vl-utils = "^0.0.8"
litellm = "^1.48.3"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
opencv-python = "^4.10.0.84"
numba = "^0.60.0"
realesrgan = "^0.3.0"
scikit-learn = "^1.5.2"
faiss-gpu = "^1.7.2"
annoy = "^1.17.3"
simple-aesthetics-predictor = "^0.1.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
